Add generator for elm (types + json) (#684)