@@ -35,11 +35,7 @@ lazy val generated = project
       ws,
       "org.scalacheck" %% "scalacheck" % "1.15.4" % Test
     ),
-    scalacOptions ++= allScalacOptions,
-    Test / javaOptions ++= Seq(
-      "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
-      "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED"
-    )
+    scalacOptions ++= allScalacOptions
   )
 
 // TODO: lib will eventually be published as a jar if it turns out
@@ -92,7 +88,6 @@ lazy val scalaGenerator = project
   .settings(commonSettings: _*)
   .settings(
     libraryDependencies ++= Seq(
-      "org.typelevel" %% "cats-core" % "2.10.0",
       "org.scalameta" %% "scalafmt-core" % "2.3.2"
     )
   )
@@ -205,9 +200,13 @@ lazy val commonSettings: Seq[Setting[_]] = Seq(
   organization := "io.apibuilder",
   testOptions += Tests.Argument("-oF"),
   libraryDependencies ++= Seq(
+    guice,
+    "com.google.inject" % "guice" % "5.1.0",
+    "com.google.inject.extensions" % "guice-assistedinject" % "5.1.0",
     "org.atteo" % "evo-inflector" % "1.2.2",
     "com.squareup.retrofit2" % "retrofit" % "2.5.0",
     "io.reactivex.rxjava2" % "rxjava" % "2.2.4",
+    "org.typelevel" %% "cats-core" % "2.10.0",
     "org.scalatestplus.play" %% "scalatestplus-play" % "5.0.0" % Test,
     "org.scalatest" %% "scalatest" % scalatestVersion % Test,
     "org.scalatestplus" %% "scalacheck-1-15" % "3.2.7.0" % Test,
@@ -216,7 +215,6 @@ lazy val commonSettings: Seq[Setting[_]] = Seq(
     "org.scalameta" %% "scalameta" % "4.4.3" % Test,
     "com.squareup" % "javapoet" % "1.13.0",
   ),
-  libraryDependencies += guice,
   scalacOptions ++= allScalacOptions,
   Test / javaOptions ++= Seq(
     "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
